-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.10.0
-
Component/s: Python - Compiler, Python - Library
-
Labels:None
-
Patch Info:Patch Available
According to THRIFT-3200 discussion, python JSON protocol is supposed to be using Base64 encoding but it doesn't.
- incorporates
-
THRIFT-2948 Python TJSONProtocol doesn't handle structs with binary fields containing invalid unicode.
-
- Closed
-
- Is contained by
-
THRIFT-3359 Binary field incompatibilities
-
- Closed
-