THRIFT-3350 Python JSON protocol does not encode binary as Base64 Client: Python Patch: Nobuaki Sukegawa

This closes #697